# Opaque_pattern_C_OOP

./: CMakeLists.txt  Makefile
.cache/clangd/index/: bar.c.C2DAF3321CFD58B7.idx  bar.h.4F5603B8BE79C2E4.idx  device_manager.c.FD228E224D47FD5A.idx  device_manager.h.09D11D5440939539.idx  foo.c.0A755556065D8DE2.idx  foo.h.BAD9BAAD5EF6D97D.idx  log.c.7CE31F9BA1A46FE2.idx  log.h.AF6D928274A3409D.idx  main.c.BECEF6391F1A1A10.idx  test_bar.c.8C343257F23EA6DE.idx  test_device_manager.c.21B25C0F694C284C.idx  test_foo.c.B3D96362AD0F0DD5.idx
.github/workflows/: documentation.yml
app/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/device_manager/: CMakeLists.txt  device_manager.c  device_manager.h
tests/: CMakeLists.txt  test_device_manager.c
